# swagger.json
@@ -188,6 +188,12 @@
         "tags": [
           "Dishes"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "description": "Requires Admin privileges",
         "requestBody": {
           "required": true,
           "content": {
@@ -280,6 +286,12 @@
         "tags": [
           "Dishes"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "description": "Requires Admin privileges",
         "parameters": [
           {
             "in": "path",
@@ -334,6 +346,12 @@
         "tags": [
           "Dishes"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "description": "Requires Admin privileges",
         "parameters": [
           {
             "in": "path",
@@ -364,6 +382,11 @@
         "tags": [
           "Orders"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "The list of the orders",
@@ -387,6 +410,11 @@
         "summary": "Create a new order",
         "tags": [
           "Orders"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
         ],
         "requestBody": {
           "required": true,
@@ -455,6 +483,11 @@
         "tags": [
           "Orders"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "in": "path",
@@ -489,6 +522,11 @@
         "summary": "Update the order by the id",
         "tags": [
           "Orders"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -532,10 +570,20 @@
           "404": {
             "description": "The order was not found"
           },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "delete": {
         "summary": "Remove the order by id",
         "tags": [
           "Orders"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -566,6 +614,11 @@
         "summary": "Returns the list of all users",
         "tags": [
           "Users"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
         ],
         "responses": {
           "200": {
@@ -614,13 +667,6 @@
                   },
                   "address": {
                     "type": "string"
-                  },
-                  "role": {
-                    "type": "string",
-                    "enum": [
-                      "user",
-                      "admin"
-                    ]
                   }
                 }
               }
@@ -652,6 +698,11 @@
         "summary": "Get the user by id",
         "tags": [
           "Users"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -688,6 +739,12 @@
         "tags": [
           "Users"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "description": "Requires Owner or Admin privileges",
         "parameters": [
           {
             "in": "path",
@@ -716,6 +773,12 @@
         "tags": [
           "Users"
         ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "description": "Requires Owner or Admin privileges",
         "parameters": [
           {
             "in": "path",
